# notifyd

./: Cargo.toml  README.md
src/: dbus.rs  lib.rs  main.rs  notification.rs  status.rs  store.rs  xsetroot.rs
src/notification/: mod.rs
