[package]
name = "notifyd"
version = "0.3.1"
authors = ["Hayley Hughes <hayley@foxes.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.11"
pretty_env_logger = "0.4.0"
zbus = "1.3.0"
zvariant = "2.3.0"
zvariant_derive = "2.3.0"
serde = { version = "1.0.117", features = ["derive"] }
